--- a/css/style.css
+++ b/css/style.css
@@ -10,35 +10,79 @@ body {
 
   background-color: #ffffff;
   background-image: url("../img/bg-photo.jpg");
-  background-position: top center;
+  background-position: center -27px;
   background-repeat: no-repeat;
 
   max-width: 1200px;
   box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
   margin: auto;
-}
-.inner-page {
-  background-image: url("../img/inner-bg.png");
-  background-position: top center;
-  background-repeat: no-repeat;
+  position: relative;
 }
 
 a {
   text-decoration: none;
 }
 
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+
+
+.logo-sedona {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0;
+  margin: 0;
+}
+
 .main-navigation {
+  position: relative;
   font-size: 14px;
   line-height: 26px;
   font-weight: 700;
   color: #000000;
-
   background-color: #ffffff;
+  margin-bottom: 450px;
 }
 
 .site-navigation {
+  display: flex;
+  justify-content: space-between;
   list-style: none;
+  padding-bottom: 20px;
+  padding: 15px 72px;
+  margin: 0;
+  margin-bottom: 76px;
 }
+
+.site-navigation li{
+  width: 239px;
+}
+
+.site-navigation .left-column {
+  text-align: left;
+}
+
+.site-navigation .right-column {
+  text-align: right;
+}
+
+.photos {
+  padding-right: 91px;
+}
+
 
 .site-navigation a {
   color: #000000;
@@ -53,140 +97,452 @@ a {
   color: #000000;
 }
 
+
+
 .logo-image {
-  margin-left: 370.5px;
+  position: absolute;
+  top: 132px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.polygon {
+  display: inline-block;
+  padding: 0;
+  margin: center;
 }
 
 .advantages {
   text-align: center;
   background-color: #ffffff;
+  display: flex;
+  margin-top: -9px;
+  padding: 0;
+  flex-direction: column;
+  align-items: center;
+  line-height: 21px;
 }
+
 .advantages h2 {
+  display: inline-block;
   font-size: 21px;
   font-weight: 700;
   color: #000000;
+  margin: center;
+  margin-bottom: 15px;
+  padding-top: 43px;
+  width: 500px;
+  line-height: 26px;
+}
+
+
+.advantages p {
+  display: inline-block;
+  margin-bottom: 54px;
 }
 
 .advantages h3 {
+  display: inline-block;
+  line-height: 21px;
   font-size: 21px;
   color: #000000;
+  padding-bottom: 4px;
+}
+
+.advantages span {
+  display: inline-block;
+  padding-bottom: 6px;
 }
 
 .advantages-list {
+  margin: 0;
+  padding: 0;
   list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+    background-color: #eeeeee;
 }
+
 .advantages-list .blue {
+  display: flex;
   color: #ffffff;
+  padding: 0;
+  margin: 0;
+}
+
+.advantages-list .first{
+  display: flex;
+  color: #ffffff;
+  margin: 0;
+  order: -1;
+}
+
+.advantages-item-container {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  margin: 0;
+  padding-top: 26px;
   background-color: #81b3d2;
 }
-.blue h3{
-  color: #ffffff;
+
+.advantages-item-container p {
+  width: 303px;
+  margin-left: 49px;
+}
+
+.advantages-item-container h3 {
+    color: #ffffff;
+    width: 150px;
+    margin-left: 125px;
 }
 
 .advantages-list .grey {
   background-color: #eeeeee;
+  width: 262px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  margin-bottom: 7px;
+  padding-top: 26px;
 }
 
-.suggestions {
-  text-align: center;
+.grey h3 {
+  width: 120px;
 }
 
 .suggestions-list {
+  display: flex;
+  justify-content: space-around;
+  flex-grow: 1;
+  margin: 0 ;
+  padding: 0;
+  padding-top: 10px;
+  align-items: center;
   list-style: none;
+  order: -1;
+  background-color: #ffffff;
 }
 
-.next-steps {
+.suggestions-item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 29px;
+  padding-top: 130px;
+  width: 305px;
+}
+
+.suggestions-item h3{
+  margin-bottom: 7px;
+}
+
+
+.suggestions-item h3::before{
+  content: "";
+  position: absolute;
+  width: 75px;
+  height: 72px;
+  top: 50px;
+  left: 113px;
+  background-image: url("../img/house-icon.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.food h3::before {
+  background-image: url("../img/food-icon.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.gift h3::before {
+  top: 44px;
+  left: 120px;
+  background-image: url("../img/gift-icon.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.next-steps .question{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 49px;
   text-align: center;
 }
 
 .next-steps b {
+  color: #000000;
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
+  margin-bottom: 10px;
 }
 
-.main-footer .hashtag {
-  font-weight: 700;
-  color: #000000;
-  font-size: 21px;
+.question-paragraph {
+  line-height: 24px;
+  margin-bottom: 46px;
 }
 
-.footer-social {
-  text-align: center;
-}
 
-.footer-social ul {
-  list-style: none;
-}
 
-.modal-search {
-  font-size: 14px;
-  font-weight: 700;
-  color: #000000;
-}
-
-.modal-search .button-title{
+ .button-modal{
   font-size: 21px;
   color: #ffffff;
   background-color: #766357;
   text-transform: uppercase;
   font-weight: 700;
   border: none;
-
+  padding: 31px 137px;
+  position: relative;
+  margin: auto;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-.modal-search .button-title:hover {
-  background-color: #604e43;
+.modal-search {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  position: absolute;
+  width: 568px;
+  font-size: 14px;
+  font-weight: 700;
+  color: #000000;
+  background-color: #ffffff;
+  padding: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-.modal-search .button-title:focus{
-  background-color: #503e33;
-  color:#847870;
+.hotel-search{
+  display: flex;
+  flex-direction: column;
+  padding: 41px;
 }
 
-.hotel-search-sedona input[type="text"],
-.hotel-search-sedona .quantity {
+.modal-search-item label {
+  padding-left: 14px;
+}
+
+.hotel-search input[type="text"] {
   font: inherit;
   text-transform: uppercase;
   background-color: #f2f2f2;
   border: none;
+  display: inline-block;
+  width: 322px;
+  padding: 6px 12px;
+  margin-left: 19px;
 }
 
-.hotel-search-sedona input[type="text"]:hover{
+.hotel-search input[type="text"]:hover{
   background-color: #ebebeb;
 }
 
-.hotel-search-sedona input[type="text"]:focus {
+.hotel-search input[type="text"]:focus {
   background-color: #ffffff;
   border: 2px solid #e5e5e5;
 }
 
-.hotel-search-sedona .button {
+ .small-input {
+  margin-top: 16px;
+  display: flex;
+  margin-left: 13px;
+  margin-bottom: 41px;
+}
+
+.adults input[type="text"] {
+  width: 90px;
+  text-align: center;
+  margin-left: 38px;
+}
+
+.childrens input[type="text"] {
+  width: 90px;
+  text-align: center;
+  margin-left: 23px;
+}
+
+.childrens {
+  margin-left: 54px;
+}
+
+.hotel-search .button {
   background-color: #81b3d2;
   font-size: 21px;
   text-transform: uppercase;
   font-weight: 700;
   color: #ffffff;
+  margin: 14px;
+  border: none;
+  padding: 17px;
 }
 
-.hotel-search-sedona .button:hover {
+.hotel-search .button:hover {
   background-color: #669ec0;
 }
 
-.hotel-search-sedona .button:focus {
+.hotel-search .button:focus {
   background-color: #5496bd;
-  color: #87b5d1
+  color: #87b5d1;
 }
+
+.button-modal:hover {
+  background-color: #604e43;
+}
+
+.button-modal:focus{
+  background-color: #503e33;
+  color:#847870;
+}
+
+
+
+.main-footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: absolute;
+  background-color: #ffffff;
+  opacity: 0.9;
+  width: 1200px;
+  height: 120px;
+  bottom: 8px;
+}
+
+.main-footer .hashtag {
+  font-weight: 700;
+  color: #000000;
+  font-size: 21px;
+  padding-left: 28px;
+  padding-bottom: 4px;
+}
+
+
+.footer-social{
+  list-style: none;
+  display: flex;
+  width: 151px;
+  text-align: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-right: 20px;
+}
+
+.social-button {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  background-color: #81b3d2;
+  width: 47px;
+  height: 47px;
+  margin-bottom: 5px;
+}
+
+
+.social-button:hover {
+  background-color: #669ec0;
+}
+
+.social-button:focus {
+  background-color: #5496bd;
+}
+.social-button:focus svg{
+  opacity: 0.3;
+}
+.footer-copyright {
+  padding-right: 116px;
+  padding-bottom: 5px;
+}
+
+.footer-copyright p {
+  align-items: center;
+  position: relative;
+}
+
+.footer-copyright p::after {
+  width: 115px;
+  height: 41px;
+  content: "";
+  top: -10px;
+  left: 85px;
+  position: absolute;
+  background-image: url("../img/logo-htmlacademy.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  fill: black;
+}
+
+
+
 
 .inner-page {
   background-image: url("../img/inner-bg.png");
-  background-position: top center;
+  background-position: center -238px;
   background-repeat: no-repeat;
   background-color: #black;
 }
 
-.inner-page .filter {
+.inner-page .main-navigation{
+  margin-bottom: -50px;
+}
+
+
+ .filters {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: -3px;;
+  line-height: 21px;
+  font-size: 16px;
+  padding: 0;
+}
+
+.filters-easy {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   width: 514px;
+   margin-left: -58px;
+}
+
+.filter-option {
+  position: relative;
+}
+
+.filter-option input[type="checkbox"] + .filter-checkbox{
+  position: absolute;
+  top: -2px;;
+  left: -40px;
+  width: 19px;
+  height: 19px;
+  border: 2px solid #ffffff;
+  border-radius: 15%;
+}
+
+.filter-option input[type="checkbox"]:checked + .filter-checkbox{
+  background-image: url("../img/shape.svg");
+  background-position: 1px 0 ;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+
+.filter-item {
+  margin-bottom: 25px;
+  font-size: 14px;
+}
+
+ .filter {
   color: #ffffff;
+}
+
+.filter-list {
+  list-style: none;
 }
 
 .inner-page fieldset {
@@ -196,21 +552,50 @@ a {
 .filter legend {
   font-weight: 700;
   font-size: 16px;
+  margin-bottom: 3px;
 }
 
 .inner-page .results {
   background-color: #ffffff;
+  display: block;
+}
+
+.results-sorts {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 22px;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .results b {
   font-size: 21px;
   font-weight: 700;
+  display: block;
+  margin-left: 55px;
 }
 
-.inner-page .sort-by-list,
+.results p {
+  margin-left: 48px;
+  line-height: 18px;
+  font-size: 12px;
+}
+
+.inner-page .sort-by-list {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  width: 250px;
+  margin-left: 40px;
+}
+
 .inner-page .sort-icons {
   list-style: none;
 }
+
 
 .sort-by-list .button,
 .sort-icons .button {
@@ -245,12 +630,21 @@ a {
 
 .sorted-results-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .sorted-results-item a {
   font-size: 21px;
   font-weight: 700;
   color: #000000;
+}
+
+.sorted-results-item {
+  display: flex;
+  border-bottom: 1px solid #e5e5e5;
+  margin-bottom: 20px;
+  padding: 20px;
 }
 
 .sorted-results-item a:hover{
@@ -311,13 +705,150 @@ a {
   background-color: #f2f2f2;
 }
 
-.visually-hidden {
+.inner-page .main-footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #ffffff;
+  width: 1200px;
+  height: 120px;
+}
+
+
+
+.filter-range {
+
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.filter-range-title {
+  margin-bottom: 9px;
+
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.price-controls {
+  position: relative;
+
+  height: 36px;
+  margin-bottom: 20px;
+
+  font-size: 0;
+
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+}
+
+.price-controls::after {
+  content: "";
   position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
+  top: 50%;
+  left: 50%;
+
+  width: 2px;
+  height: 22px;
+
+  background: #ffffff;
+  transform: translate(-50%, -50%);
+}
+
+.price-controls label {
+  display: inline-block;
+
+  font-size: 14px;
+  line-height: 38px;
+  vertical-align: top;
+
+  cursor: pointer;
+}
+
+.price-controls .min-price,
+.price-controls .max-price {
+  width: 90px;
+  padding-left: 65px;
+}
+
+.price-controls input {
+  width: 50px;
+  margin: 0;
+
+  color: inherit;
+  font: inherit;
+
+  background: none;
+  border: none;
+}
+
+.range-controls {
+  position: relative;
+
+  margin-bottom: 32px;
+}
+
+.range-controls .scale {
+  height: 2px;
+
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.range-controls .bar {
+  width: 80%;
+  height: 2px;
+
+  background: #ffffff;
+}
+
+.range-toggle {
+  position: absolute;
+  top: -9px;
+
+  width: 4px;
+  height: 4px;
+
+  background: #ababab;
+  border: 8px solid #ffffff;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  cursor: pointer;
+}
+
+.range-toggle:hover {
+  background: #1c4f80;
+}
+
+.range-toggle-min {
+  left: 0;
+}
+
+.range-toggle-max {
+  left: 80%;
+}
+
+.btn-transparent {
+  display: block;
+  margin: 0 auto;
+  padding: 6px 35px;
+
+  font-size: 14px;
+  line-height: 20px;
+  color: #ffffff;
+  text-transform: uppercase;
+
+  background: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.btn-transparent:hover {
+  color: #000000;
+
+  background: #ffffff;
+}
+
+.inner-page .main-footer {
+  position: relative;
 }
